<resources>
    <string name="app_name">Stats</string>

    <string name="copyright">NHL and the NHL Shield are registered trademarks of the National Hockey League. NHL and NHL team marks are the property of the NHL and its teams. © NHL 2018. All Rights Reserved.</string>
    <string name="player_image">Player Image</string>
    <string name="games">Games</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="points">Points</string>
    <string name="nhl_head_shot_url">https://nhl.bamcontent.com/images/headshots/current/168x168/</string>
    <string name="player_details_successful">Player details successful</string>
    <string name="player_stats_successful">Player stats successful</string>
    <string name="goalie_stats_successful">Goalie stats successful</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="save_percentage">Save %</string>
</resources>
